--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,8 +7,10 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-
+<header>
+<%= render 'layouts/header' %>
+</header>
 <%= yield %>
-
+<footer></footer>
 </body>
 </html>
